<resources>
    <string name="app_name">Spoark</string>

    <string name="title_section1">Home</string>
    <string name="title_section2">Search</string>
    <string name="title_section3">My Games</string>
    <string name="title_section4">My Parks</string>
    <string name="title_section5">Profile</string>
    <string name="title_section6">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="progress_login">Logging In</string>
    <string name="login">Log in</string>
    <string name="createAccount">Create Account</string>
    <integer name="loginIMEActionId">0</integer>

    <!-- Strings for items on layouts -->
    <string name="gameLocator">Place pin to location of game</string>
    <string name="selectSport">Select a Sport:</string>
    <string name="selectPlayers">Number of Players:\n(without yourself)</string>
    <string name="selectDescription">Provide a Description Below:</string>
    <string name="selectLevel">Level of Difficulty:</string>
    <string name="selectSecurity">Select Who Can See:</string>
    <string name="invitePlayers">Invite Players</string>
    <string name="privateGame">Private (only invited players)</string>
    <string name="publicGame">Public (everyone)</string>
    <string name="friendGame">Friends (only your friends)</string>
    <string name="levelDescription">(5 most competitive)</string>
    <string name="optional">(optional)...</string>
    <string name="selectYourself">Add Yourself to Game?</string>



    <!-- Error Messages -->
    <string name="errorMessage">Please </string>
    <string name="errorBlankEmail">enter an email</string>
    <string name="errorBlankPass">enter a password</string>
    <string name="errorInvalidEmail">enter a valid email address</string>
    <string name="errorMisMatchedPass">enter the same password twice</string>
    <string name="errorSpacesPass">avoid use of leading and trailing spaces in password</string>
    <string name="errorSpacesConfirm">avoid use of leading and trailing spaces in confirm password</string>
    <string name="errorJoin">, and </string>
    <string name="errorEnd">.</string>

    <!-- Game Titles -->
    <string name="organizer">Organizer:</string>
    <string name="neededPlayers">Players Needed:</string>
    <string name="signedUpPlayers">Players Signed Up:</string>
    <string name="level">Level:</string>

    <!-- Sports -->
    <string name="soccer">Soccer</string>


    <string name="title_activity_game">GameActivity</string>


</resources>
