<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mesicspoark.kenan.spoark.GameActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Include the ToolBar -->
        <include
            layout="@layout/toolbar" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="60dp">
    <ImageView
        android:id="@+id/imageSport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dp"
        android:layout_alignParentTop="false"
        android:adjustViewBounds="false"
        android:src="@drawable/ic_soccer"/>

    <ImageView
        android:id="@+id/imageUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="false"
        android:src="@drawable/ic_add_user"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/organizer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/imageSport"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="10dp"
        android:text="@string/organizer"
        android:textSize="16sp"
        android:textColor="@color/primary_text"
        />

    <TextView
        android:id="@+id/organizerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/organizer"
        android:layout_marginLeft="10dp"
        android:text="Kenan Mesic"
        android:textColor="@color/secondary_text"
        android:layout_alignBottom="@+id/organizer" />

    <TextView
        android:id="@+id/neededPlayers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/neededPlayers"
        android:textSize="16sp"
        android:textColor="@color/primary_text"
        android:layout_below="@+id/organizer"
        android:layout_alignLeft="@+id/organizer"
        android:layout_alignStart="@+id/organizer"
        android:layout_marginTop="2dp"/>

    <TextView
        android:id="@+id/numNeededPlayers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/neededPlayers"
        android:layout_marginLeft="10dp"
        android:text="10"
        android:textColor="@color/secondary_text"
        android:layout_alignBottom="@+id/neededPlayers" />

    <TextView
        android:id="@+id/sport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="19dp"
        android:layout_below="@id/imageSport"
        android:textColor="@color/secondary_text"
        android:text="@string/soccer"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/signedUpPlayers"
        android:id="@+id/textView"
        android:singleLine="false"
        android:textSize="16sp"
        android:textColor="@color/primary_text"
        android:layout_below="@+id/neededPlayers"
        android:layout_alignLeft="@+id/neededPlayers"
        android:layout_alignStart="@+id/neededPlayers"
        android:layout_marginTop="2dp"
        android:clickable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="5"
        android:id="@+id/textView3"
        android:layout_alignBottom="@+id/textView"
        android:layout_toRightOf="@+id/numNeededPlayers"
        android:layout_toEndOf="@+id/numNeededPlayers"
        android:singleLine="true"
        android:textColor="@color/secondary_text"
        android:clickable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/level"
        android:id="@+id/level"
        android:layout_alignTop="@+id/where"
        android:layout_alignLeft="@+id/imageSport"
        android:layout_marginTop="28dp"
        android:textColor="@color/primary_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="When:"
        android:id="@+id/when"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:textColor="@color/primary_text"
        android:singleLine="true"
        android:layout_marginTop="2dp"
        android:textSize="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="6-9pm"
        android:id="@+id/time"
        android:layout_alignBottom="@+id/when"
        android:layout_toRightOf="@+id/when"
        android:layout_toEndOf="@+id/when"
        android:layout_marginLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Where:"
        android:id="@+id/where"
        android:layout_below="@+id/time"
        android:layout_alignLeft="@+id/when"
        android:layout_alignStart="@+id/when"
        android:textColor="@color/primary_text"
        android:layout_marginTop="2dp"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Promentory Park, Folsom CA"
        android:id="@+id/textView5"
        android:layout_alignBottom="@+id/where"
        android:layout_alignLeft="@+id/time"
        android:layout_alignStart="@+id/time"
        android:singleLine="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/level1"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/level"
        android:layout_alignTop="@+id/where"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false"
        android:layout_toEndOf="@id/level"
        android:src="@drawable/ic_star"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/level2"
        android:layout_below="@+id/sport"
        android:layout_alignTop="@id/level1"
        android:layout_toRightOf="@+id/level1"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false"
        android:layout_toEndOf="@id/level"
        android:src="@drawable/ic_star"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/level3"
        android:layout_below="@+id/sport"
        android:layout_alignTop="@id/level1"
        android:layout_toRightOf="@+id/level2"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false"
        android:layout_toEndOf="@id/level"
        android:src="@drawable/ic_star"/>
    </RelativeLayout>
</RelativeLayout>
